test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-borrowed-from-oknil-nil.good
init-field-arg-nonnil-borrowed-from-oknil-nil.chpl:9: In initializer:
init-field-arg-nonnil-borrowed-from-oknil-nil.chpl:10: error: cannot initialize field 'lhs' of type 'borrowed MyClass' from 'nil'
  init-field-arg-nonnil-borrowed-from-oknil-nil.chpl:14: called as MyRecord.init(rhs: nil)
